<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin_default"
    android:paddingBottom="@dimen/activity_vertical_margin_default"
    android:paddingLeft="@dimen/activity_horizontal_margin_default"
    android:paddingRight="@dimen/activity_horizontal_margin_default"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logotipo_isec"
        android:contentDescription="@string/description_logo" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/title1"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/activity_vertical_margin_default"
        android:layout_marginBottom="@dimen/activity_vertical_margin_small"/>

    <View
        android:layout_width="210sp"
        android:layout_height="1sp"
        android:id="@+id/v_space_titleLocation1"
        android:background="@color/text"
        android:focusable="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5sp">
    </View>
    <View
        android:layout_width="290sp"
        android:layout_height="1sp"
        android:id="@+id/v_space_titleLocation2"
        android:background="@color/text"
        android:focusable="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5sp">
    </View>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:id="@+id/v_space_titleLocation3"
        android:background="@color/text"
        android:focusable="false"
        android:layout_marginBottom="5sp"
        android:paddingBottom="@dimen/activity_vertical_margin_default">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_content"
        android:orientation="vertical">

        <ExpandableListView
            android:id="@+id/elv_expandable_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </ExpandableListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_buttons"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin_small">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_activity_type"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:layout_marginTop="@dimen/activity_vertical_margin_default"
            android:layout_marginStart="@dimen/activity_vertical_margin_default">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_walk"
                android:text="@string/rb_walk"
                android:textColor="@color/text"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_run"
                android:text="@string/rb_run"
                android:textColor="@color/text"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_sit"
                android:text="@string/rb_sitting"
                android:textColor="@color/text"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_down"
                android:text="@string/rb_down"
                android:textColor="@color/text"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_up"
                android:text="@string/rb_up"
                android:textColor="@color/text"/>
        </RadioGroup>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_send"
            android:src="@drawable/send"
            android:background="@color/background"
            android:contentDescription="@string/ib_send_description" />
    </LinearLayout>

</LinearLayout>